--- a/final_html/header.html
+++ b/final_html/header.html
@@ -22,7 +22,7 @@
       Impact
     </a>
     <a data-page="Statistics" class="text-gray-600 hover:text-purple-600 cursor-pointer">
-      Statistics
+      Why It Matters
     </a>
     <a
       data-page="Donate"
