Changed home.html program counts
Removed program counts from category descriptions.

--- a/final_html/home.html
+++ b/final_html/home.html
@@ -241,7 +241,7 @@
             Explore Categories
           </h2>
           <p class="text-lg text-gray-600">
-            Over 100+ free programs across 5 interest areas
+            Free programs across 5 interest areas
           </p>
         </div>
 
@@ -255,7 +255,6 @@
               🎨
             </div>
             <div class="font-bold text-gray-900 mb-1">Arts &amp; Crafts</div>
-            <div class="text-sm text-gray-500">24 programs</div>
           </a>
 
           <!-- Category 2 -->
@@ -267,7 +266,6 @@
               🎵
             </div>
             <div class="font-bold text-gray-900 mb-1">Music</div>
-            <div class="text-sm text-gray-500">18 programs</div>
           </a>
 
           <!-- Category 3 -->
@@ -279,7 +277,6 @@
               🔬
             </div>
             <div class="font-bold text-gray-900 mb-1">STEM</div>
-            <div class="text-sm text-gray-500">20 programs</div>
           </a>
 
           <!-- Category 4 -->
@@ -291,7 +288,6 @@
               ⚽
             </div>
             <div class="font-bold text-gray-900 mb-1">Sports</div>
-            <div class="text-sm text-gray-500">16 programs</div>
           </a>
 
           <!-- Category 5 -->
@@ -303,7 +299,6 @@
               💻
             </div>
             <div class="font-bold text-gray-900 mb-1">Coding</div>
-            <div class="text-sm text-gray-500">22 programs</div>
           </a>
         </div>
       </div>
