--- a/final_html/home.html
+++ b/final_html/home.html
@@ -241,7 +241,7 @@
             Explore Categories
           </h2>
           <p class="text-lg text-gray-600">
-            Free programs across 5 interest areas
+            Over 100+ free programs across 5 interest areas
           </p>
         </div>
 
@@ -255,6 +255,7 @@
               🎨
             </div>
             <div class="font-bold text-gray-900 mb-1">Arts &amp; Crafts</div>
+            <div class="text-sm text-gray-500">24 programs</div>
           </a>
 
           <!-- Category 2 -->
@@ -266,6 +267,7 @@
               🎵
             </div>
             <div class="font-bold text-gray-900 mb-1">Music</div>
+            <div class="text-sm text-gray-500">18 programs</div>
           </a>
 
           <!-- Category 3 -->
@@ -277,6 +279,7 @@
               🔬
             </div>
             <div class="font-bold text-gray-900 mb-1">STEM</div>
+            <div class="text-sm text-gray-500">20 programs</div>
           </a>
 
           <!-- Category 4 -->
@@ -288,6 +291,7 @@
               ⚽
             </div>
             <div class="font-bold text-gray-900 mb-1">Sports</div>
+            <div class="text-sm text-gray-500">16 programs</div>
           </a>
 
           <!-- Category 5 -->
@@ -299,6 +303,7 @@
               💻
             </div>
             <div class="font-bold text-gray-900 mb-1">Coding</div>
+            <div class="text-sm text-gray-500">22 programs</div>
           </a>
         </div>
       </div>
@@ -401,7 +406,7 @@
               </div>
               <div>
                 <h3 class="text-2xl font-bold text-gray-900">Our Impact Scale</h3>
-                <p class="text-sm text-gray-500">4 levels • 5+ year roadmap</p>
+                <p class="text-sm text-gray-500">4 levels</p>
               </div>
             </div>
 
