Update text for inclusivity in home.html

--- a/final_html/home.html
+++ b/final_html/home.html
@@ -26,11 +26,11 @@
           <div class="transition-all duration-700 transform translate-y-5 opacity-0" data-animate="hero-left">
             <div class="inline-flex items-center gap-2 px-4 py-2 bg-gradient-to-r from-blue-600 to-purple-600 text-white rounded-full text-sm font-semibold mb-6 shadow-lg">
               <i data-lucide="sparkles" class="w-4 h-4"></i>
-              <span>Free for Every Child</span>
+              <span>Supported for Every Child</span>
             </div>
 
             <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-gray-900 leading-tight mb-6">
-              Connect Children to
+              Connect Underserved Children to
               <span class="bg-gradient-to-r from-blue-600 via-purple-600 to-pink-600 bg-clip-text text-transparent">
                 Free Opportunities
               </span>
