--- a/final_html/home.html
+++ b/final_html/home.html
@@ -26,7 +26,7 @@
           <div class="transition-all duration-700 transform translate-y-5 opacity-0" data-animate="hero-left">
             <div class="inline-flex items-center gap-2 px-4 py-2 bg-gradient-to-r from-blue-600 to-purple-600 text-white rounded-full text-sm font-semibold mb-6 shadow-lg">
               <i data-lucide="sparkles" class="w-4 h-4"></i>
-              <span>Supported for Every Child</span>
+              <span>Supportive for Every Child</span>
             </div>
 
             <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-gray-900 leading-tight mb-6">
