Update description of extracurricular offerings

--- a/final_html/home.html
+++ b/final_html/home.html
@@ -37,7 +37,7 @@
             </h1>
 
             <p class="text-lg text-gray-600 mb-8 leading-relaxed">
-              Every child deserves to explore their passions. We connect families from low-income communities with free online extracurriculars in arts, science, coding, sports, and more.
+              Every child deserves to explore their passions. We connect families from low-income communities with free extracurriculars (online and in-person) in arts, science, coding, sports, and more.
             </p>
 
             <div class="flex flex-wrap gap-4 mb-8">
