Simplify impact description in impact.html

--- a/final_html/impact.html
+++ b/final_html/impact.html
@@ -30,7 +30,7 @@
       </h1>
 
       <p class="text-lg text-gray-600 leading-relaxed max-w-3xl mx-auto">
-        Here’s how ConnectKids expands access, participation, and long-term opportunity for children across the United States—through a four-level, multi-year roadmap.
+        Here’s how ConnectKids expands access, participation, and long-term opportunity for children across the United States—through a roadmap.
       </p>
     </div>
   </section>
